# DataMigrationValidationTool

./: .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
data_migration_validation_tool/: data_check_execution.py  exceptions.py
data_migration_validation_tool/datacheck/: __init__.py  base_check.py
data_migration_validation_tool/datacheck/data_quality_check/column_check/: __init__.py  check_column_value_belong_to_set.py  check_column_value_to_be_in_range.py  unique_column_value_check.py
data_migration_validation_tool/datacheck/data_quality_check/value_check/: __init__.py  empty_table_check.py  table_count_check.py
data_migration_validation_tool/datasource/: __init__.py  base_datasource.py  bigquery_datasource.py  sqlalchemy_datasource.py
data_migration_validation_tool/datasource/sql/: bigquery_datasource.py  sqlalchemy_datasource.py
docs/Data Checks/: datacheck.md
docs/Data Checks/Data Quality Checks/: check_column_value_belong_to_set.md  check_column_value_to_be_in_range.md  data_quality_checks.md  empty_table_check.md  table_count_check.md  unique_column_value_check.md
docs/Data Sources/: datasource.md
docs/Data Sources/sql/: bigquery_datasource.md  sqlalchemy_datasource.md
scripts/: sqlite_utils.py
tests/: test_bigquery_datasource.py  test_datasource.py  test_empty_table_check.py  test_sqlalchemy_datasource.py  test_table_count_check.py
