[tool.poetry]
name = "data-migration-validation-tool"
version = "0.1.0"
description = "A Tool to Validate the data using testcase required for data migration projects."
authors = ["NarendraBabuOggu <narendrababuoggu393@gmail.com>"]
license = "MIT"
packages = [{include = "data_migration_validation_tool"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
SQLAlchemy = "^1.4.47"

[tool.poetry.dev-dependencies]
pytest = "^7.4.1"
black = "^23.7.0"
pytest-black = "^0.3.12"
tox = "^4.11.1"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
