[tool.poetry]
name = "data-migration-validation-tool"
version = "0.1.0"
description = "A Tool to Validate the data using testcase required for data migration projects."
authors = ["NarendraBabuOggu <narendrababuoggu393@gmail.com>"]
license = "MIT"
packages = [{include = "data_migration_validation_tool"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.1.0"
SQLAlchemy = "^1.4.47"
typeguard = "^4.1.3"
sqlalchemy-bigquery = "^1.8.0"
google-cloud-bigquery-storage = "^2.22.0"
pandas-gbq = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.1"
black = "^23.9.0"
pytest-black = "^0.3.12"
tox = "^4.11.1"
mypy = "^1.5.1"
pymysql = "^1.1.0"
mkdocs = "^1.5.2"
mkdocs-material = "^9.2.8"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-bootstrap = "^1.1.1"
cryptography = "^41.0.3"
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
